[tool.poetry]
name = "Repour"
version = "3.1.0"
description = "Repour"
authors = ["Alex Szczuczko <alex@szc.ca>",
           "Jakub Senko <jsenko@redhat.com>",
           "Dustin Kut Moy Cheung <dcheung@redhat.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.10"
asyncssh = "^2.17.0"
voluptuous = "^0.15.2"
python-jose = "^3.3"
pyyaml = "^6.0"
prometheus_client = "^0.20.0"
prometheus_async = "^22.2"
kafka-logging-handler = "^0.2.5"
flake8 = "^7.1"
more-itertools = "^10.4.0"
giturlparse = "^0.12.0"
pylru = "^1.2.1"
cryptography = "43.0.0"
python-json-logger = "^2.0.7"
opentelemetry-distro = {extras = ["otlp"], version = "^0.45b0"}
opentelemetry-instrumentation-logging = "^0.45b0"
opentelemetry-exporter-otlp-proto-grpc = "^1.24.0"
opentelemetry-instrumentation-aiohttp-client = "^0.45b0"
setuptools = "^73.0.1"
python-gitlab = "^4.9.0"

[tool.poetry.dev-dependencies]
tox = "^4.18"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[tool.tox]
legacy_tox_ini = """
[tox]
skipsdist = True

[testenv]
allowlist_externals = poetry, pre-commit, flake8
skip_install = true
# install pytest in the virtualenv where commands will be executed
deps =
    pytest
    pre-commit
    flake8
commands =
    poetry install
    pre-commit run --all-files --show-diff-on-failure
    poetry run pytest test/
    flake8
"""
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.ruff]
select = ["E4",  "E7", "E9", "F", "I"]
