[tool.poetry]
name = "Repour"
version = "3.0.6"
description = "Repour"
authors = ["Alex Szczuczko <alex@szc.ca>",
           "Jakub Senko <jsenko@redhat.com>",
           "Dustin Kut Moy Cheung <dcheung@redhat.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.11"
asyncssh = "^2.20.0"
voluptuous = "^0.15.2"
python-jose = "^3.4"
pyyaml = "^6.0"
prometheus_client = "^0.21.1"
prometheus_async = "^25.1"
kafka-logging-handler = "^0.2.5"
flake8 = "^7.2"
more-itertools = "^10.6.0"
giturlparse = "^0.12.0"
pylru = "^1.2.1"
cryptography = "44.0.2"
python-json-logger = "^3.3.0"
opentelemetry-distro = {extras = ["otlp"], version = "^0.45b0"}
opentelemetry-instrumentation-logging = "^0.45b0"
opentelemetry-exporter-otlp-proto-grpc = "^1.24.0"
opentelemetry-instrumentation-aiohttp-client = "^0.45b0"
setuptools = "^78.1.0"
python-gitlab = "^5.6.0"

[tool.poetry.dev-dependencies]
tox = "^4.24"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[tool.tox]
legacy_tox_ini = """
[tox]
skipsdist = True

[testenv]
allowlist_externals = poetry, pre-commit, flake8
skip_install = true
# install pytest in the virtualenv where commands will be executed
deps =
    pytest
    pre-commit
    flake8
commands =
    poetry install
    pre-commit run --all-files --show-diff-on-failure
    poetry run pytest test/
    flake8
"""
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.ruff]
select = ["E4",  "E7", "E9", "F", "I"]
